# blast_python

./: .gitignore  LICENSE.txt  READ.me  README.md  draft.py  main.py  pyproject.toml  setup.py  test.py  token.txt
scripts/: __init__.py  blastn.py  copy.sh  copy_to_server.sh  errors_catching.py  errors_catching:.py  filenames_parsing.py  filesystem_navigation.py  get_files.py  main.py  make_consensus.py  remove_files.py  rename.sh  run.py  subpeaks.py  test.py
server/: blastn.sh  clock.sh  slurm_blast.sh
test/: Plate-2024-04-10_C_1_16S155-F1_A02_01_2.ab1  Plate-2024-04-10_C_1_16SE1114.1096-R1_C02_03_2.ab1  Plate-2024-04-10_C_2_16S155-F1_B02_02_2.ab1  Plate-2024-04-10_C_2_16SE1114.1096-R1_D02_04_2.ab1  blastn.csv  blastn.tsv  report.csv  report.tsv
test/blast_alns/: blast_aln_1.txt  blast_aln_2.txt
test/consensus_alns/: 1_merged.aln  2.aln
test/fasta/: 1.fa  1_consensus.fa  1_merged_consensus.fa  2.fa  2_consensus.fa  2_merged_consensus.fa  Plate-2024-04-10_C_1_16S155-F1_A02_01_2_trimmed.fa  Plate-2024-04-10_C_1_16SE1114.1096-R1_C02_03_2_trimmed_rc.fa  Plate-2024-04-10_C_2_16S155-F1_B02_02_2_trimmed.fa  Plate-2024-04-10_C_2_16SE1114.1096-R1_D02_04_2_trimmed_rc.fa
utilities/: _rename_multi.py  copy.sh  copy_from_google.sh  copy_to_server.sh  rename.sh  rename_multi.py
