[project]
name = "Automatic Sanger sequencing results analysis"
version = "0.0.1"
authors = [
  { name="Elena Lopatukhina", email="helena.lopatukhina@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: CSP",
    "Operating System :: Linux",
]

[project.urls]
Homepage = "https://github.com/lopatushka/blast_python"